Remove scrollbars by removing margin from the body, but that's is by the CSS in the HTML file, which loads first

--- a/public/index.html
+++ b/public/index.html
@@ -16,10 +16,19 @@
     <style>
       /* Loader */
 
-      .loader-wrapper {
+      body,
+      html,
+      *,
+      *::after,
+      *::before {
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+      }
 
+      .loader-wrapper {
         height: 100vh;
-        
+
         display: flex;
         justify-content: center;
         align-items: center;
